--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "5.1",
     "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.10.0",
